plang/testing/logs/false-incorrect/6/program6.p.p
qCtPP yFSf (P1) (VHzST) lB8V.

dvOIf Vbjxs Wc :- (rT (HF); xN (dE4H zy (I) Q09I kV2uf); l15lE (PSsT8) (TjRR); cS6J7 Xd), (y6kP y5zn Te (A)), dwc g5p8 Ti0S (Z) (v5o ub); bW (i) LC Z, u5u4N RCj hQFlI (o (o ZRd) A8Zq7) l; n4eI l (G6eK); nlec, gpJ (B4vTW) (HuVP) (hUr); z z C1QVu (m (jI oB1d (E) Lwj (P)) vfd D), l3 (e (vSz (amwU) w) (E9sz) v) oelV; lJ2Li; fhrC cXQ PI9H ZHHRe; pqYcg m49df, pwy (G).


frDe INw5 :- ((vbgYN, coR (wvJld (o)), (xOi pjgZ (Wo) (XW)))); (jV l H2Cc vs F; jmU6n gXsm AkA Qy7; rRdr (M) bK; g (P) (jkypE (V) QRRs (Brv1)) (Fq0l) omKb; quBD9 Fz; eU (Aw) FXE (xS9a); x85V; hwr7).


hr9tT (r4yv (Vb120) fXP) F8 m h8D5 :- (((hk mDm T4V; z (tWJ ImdO (Y) (Pdz) eXw) (Vg) lx))); uM (iZ (hZK (EJyhv) MVS)) wUriD; (((meyIp C (JXY) HMx))).

kzUVM (S6rdU) (O4it) wP.

pjXg9 :- (f9K qb, poBD (QX) eLtE tV); n8 E6ak FTFu T, yxO (B) (yx (Pg2P) (bTCi (Ft) (xep D zicy (H12W1)) (WCtD) (E)) G01N); (ak Elyy TbCyv (CFh)); (fn, oGhK), x (R9) (hc7 M40j (lD7 (O5) NrYO) (W)) (pi3CR (N) (ZNSn)), zY0 H1 w, b; wMc9A G0qf (fWfT7 U GZ7 j) (oM qVp PJr6 of (M1MW)).
hMx (sbvh FjS (Zs) (bg6jm)) (f3 YXGq (kf7Mo jlQ) YN0s (q5)).


fpu Rohy.
? bI (pw).
